--- a/resume_zenit.html
+++ b/resume_zenit.html
@@ -1,31 +1,3 @@
-<!--
-REQUIRED FIELDS:
-//Your Photo
-//Full Name
-//Address
-//Contact Information
-//Short Personal Statement
-//Educational History
-General and Technical Skills
-//Character References
-//Work Experience
-REQUIRED TAGS:
-  <img>
-  <p>
-  <ul>
-  <ol>
-  <li>
-  <table>
-  <th>
-  <tr>
-  <td>
-  <hr>
-  <title>
-  <h1> -<h6> (choose at least 1) 
-  <b>
-  <i>
--->
-
 <!DOCTYPE html>
 <head>
   <title>Wahlberg Zenit Resume</title>
@@ -72,12 +44,12 @@ REQUIRED TAGS:
 
 <!--Footer kuno-->
     </header>
-    <hr></hr>
-    <ul>
+    <hr>
       <h3>Address:</h3>
-      <p><ul><i>Legazpi City, Albay</i></ul></p>
+      <p><i>Legazpi City, Albay</i></p>
       <h3>Contact Information:</h3>
-      <p><ul>09773952097</ul></p>
-    </ul>
-  
+      <p>09773952097</p>
+    <h1>ADPOT ME FOR YOUR PROJECTS!</h1>
+    <p>Let's revamp your websites:)</p>
+    <a href="contact.html">Hit me up!</a>
 </body>
